--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "8.9.0"
   },
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
